--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,6 +15,7 @@
 		"@emotion/server": "^11.4.0",
 		"@emotion/styled": "^11.8.1",
 		"@react-icons/all-files": "^4.1.0",
+		"axios": "^0.26.0",
 		"embla-carousel-react": "^6.2.0",
 		"next": "12.1.0",
 		"react": "17.0.2",
@@ -26,6 +27,7 @@
 		"@4sizn/customlog-web": "^0.0.6",
 		"@types/node": "17.0.21",
 		"@types/react": "17.0.39",
+		"@types/axios": "^0.14.0",
 		"babel-plugin-macros": "^3.1.0",
 		"classnames": "^2.3.1",
 		"eslint": "8.10.0",
